# competitividad-turistica

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  run.py
.github/workflows/: ci.yml
data/: README.md
docs/referencia/: TCRB_Competitividad_Turistica_Chile.ipynb  Turismo receptivo en Chile.html
docs/referencia/Turismo receptivo en Chile_files/: aos.js.descarga  banco-central-search-validator.js.descarga  clay.css  combo(1)  combo(2)  combo(3)  combo(4)  combo(5)  datepicker.min.js.descarga  destination  functions.js.descarga  gtm.js.descarga  html2canvas.min.js.descarga  jquery.autocomplete.min.js.descarga  js  layout_set_logo  loader.js.descarga  locale.min.js.descarga  lodash.js.descarga  main(1).css  main(2).css  main(3).css  main.css  main.js.descarga  saved_resource(1)  saved_resource(11)  saved_resource(12)  saved_resource(13)  saved_resource(14)  saved_resource(15)  saved_resource(3)  saved_resource(4)  saved_resource(5)  saved_resource(6)  saved_resource(7)  saved_resource(8)  saved_resource(9)  slick.js.descarga  util.js.descarga  vdcn.js.descarga
src/competitividad_turistica.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/competitividad_turistica/calc/: correlation.py  decomposition.py  seasonality.py  statistics.py  tcrb.py  volatility.py
src/competitividad_turistica/cli/: deploy.py  generate.py
src/competitividad_turistica/config/: countries.py  settings.py
src/competitividad_turistica/data/: cache.py  models.py  pipeline.py
src/competitividad_turistica/data/sources/: bcch.py  bluelytics.py  fred.py  indec.py  worldbank.py  yahoo.py
src/competitividad_turistica/products/dashboard/: app.py
src/competitividad_turistica/viz/: charts.py  tables.py  theme.py
tests/: test_calc.py  test_edge_cases.py
